# rust-http-playback-proxy

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  README.md  README_ja.md  REVIEW.md  SIGNAL.md  WINDOWS.md  check-ci.sh  cobertura.xml
.cargo/: config.toml
.github/workflows/: acceptance-test.yml  acceptance-tests.yml  e2e.yml  main.yml  release.yml  test.yml  update-binaries.yml  windows.yml
accept/: README.md
accept/golang/: README.md  main_test.go
accept/minimum/: README.md  run.sh
accept/typescript/: test.js
acceptance/: Makefile  README.md
acceptance/content/: Cargo.toml  run.sh
acceptance/content/src/: main.rs
acceptance/golang/: go.mod  main_test.go
acceptance/minimum/: run.sh
acceptance/performance/: Makefile  run.sh
acceptance/performance/src/: main.rs
acceptance/typescript/: README.md  package.json  test.js
coverage/: tarpaulin-report.html
e2e/: Makefile  README.md
e2e/content/: Cargo.toml  run.sh
e2e/content/src/: main.rs
e2e/lighthouse/: test-dhc-shiftjis.sh
e2e/minimum/: Cargo.toml  README.md  run.sh
e2e/minimum/src/: main.rs
e2e/performance/: Cargo.toml  Makefile  README.md  run.sh
e2e/performance/src/: main.rs
golang/: README.md  download.go  go.mod  proxy.go  proxy_unix.go  proxy_windows.go  types.go  version.go
golang/example/: shutdown_test.go
reference/: types.ts
src/: beautify.rs  cli.rs  main.rs  signal_sender.rs  traits.rs  types.rs  utils.rs
src/playback/: hudsucker_handler.rs  inventory_tests.rs  mod.rs  proxy.rs  signal_handler.rs  tests.rs  transaction.rs  transaction_tests.rs
src/recording/: batch_processor.rs  hudsucker_handler.rs  mod.rs  processor.rs  processor_tests.rs  proxy.rs  signal_handler.rs  tests.rs
src/types/: tests.rs
src/utils/: tests.rs
tests/: integration_test.rs
typescript/: README.md  package.json
typescript/examples/: shutdown-test.ts
typescript/src/: binary.ts  index.ts  proxy.ts  types.ts
