[package]
name = "content-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
encoding_rs = "0.8"
flate2 = "1.0"
brotli = "3.3"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.libc]
version = "0.2"
