[package]
name = "performance-acceptance-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "performance-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
bytes = "1.7"
tempfile = "3.13"
libc = "0.2"
rcgen = "0.13"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console"] }
rustls = "0.23"
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
